--- a/src/components/Menu.css
+++ b/src/components/Menu.css
@@ -29,12 +29,17 @@ html {
   width: 100%;
   max-width: 400px;
   height: 100%;
-  /* max-height: 800px; */
   background-color: white;
   border-radius: 12px;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
   padding: 1rem;
   box-sizing: border-box;
+}
+
+.menu-items {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
 }
 
 .logo {
