--- a/src/components/MenuItem.css
+++ b/src/components/MenuItem.css
@@ -6,7 +6,7 @@
   flex-direction: column; /* Arrange items vertically */
   align-items: center; /* Center items horizontally */
   justify-content: center; /* Center items vertically */
-  border: 1px solid black;
+  /* border: 1px solid black; */
   box-sizing: border-box;
   margin: 0.5rem;
   padding: 10px; /* Add some padding */
