Refactor menu component to include item ml in menu items

--- a/src/components/MenuItem.css
+++ b/src/components/MenuItem.css
@@ -4,12 +4,13 @@
   display: flex;
 
   flex-direction: column; /* Arrange items vertically */
-  align-items: center; /* Center items horizontally */
-  justify-content: center; /* Center items vertically */
-  /* border: 1px solid black; */
+  align-items: center; /* Center horizontally */
+  justify-content: center; /* Center vertically */
   box-sizing: border-box;
   margin: 0.5rem;
-  padding: 10px; /* Add some padding */
+  padding: 10px;
+  /* For Debugging */
+  /* border: 1px solid black; */
 }
 
 .menu-item img {
@@ -22,6 +23,16 @@
 .menu-item p {
   margin: 5px 0;
   text-align: center;
+}
+
+.menu-item p:nth-of-type(2) {
+  margin-bottom: 0.1rem;
+}
+
+.menu-item p:nth-of-type(3) {
+  margin-top: 0;
+  margin-bottom: 0.1rem;
+  color: gray;
 }
 
 .menu-item button {
