--- a/src/components/Menu.css
+++ b/src/components/Menu.css
@@ -18,6 +18,11 @@ html {
   z-index: 10;
 }
 
+.menu-heading a {
+  text-decoration: none;
+  color: inherit;
+}
+
 .menu-container {
   display: flex;
   justify-content: center;
