--- a/src/components/Menu.css
+++ b/src/components/Menu.css
@@ -1,55 +1,21 @@
 body,
 html {
+  height: 100%;
   margin: 0;
   padding: 0;
-  height: 100%;
 }
 
 .header {
+  align-items: center;
+  background-color: white;
+  box-sizing: border-box;
   display: flex;
   justify-content: space-between;
-  align-items: center;
   padding: 1rem;
-  box-sizing: border-box;
   /* Fix header to top */
   position: sticky;
   top: 0;
-  background-color: white;
   z-index: 10;
-}
-
-.menu-heading a {
-  text-decoration: none;
-  color: inherit;
-}
-
-.menu-container {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  min-height: 100vh;
-  background-color: #f5f5f5;
-  padding: 1rem;
-  box-sizing: border-box;
-}
-
-.menu-card {
-  display: flex;
-  flex-direction: column;
-  width: 100%;
-  max-width: 400px;
-  height: 100%;
-  background-color: white;
-  border-radius: 12px;
-  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-  padding: 1rem;
-  box-sizing: border-box;
-}
-
-.menu-items {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
 }
 
 .logo {
@@ -59,21 +25,62 @@ html {
 }
 
 .logo-image {
-  max-height: 50px;
   margin-bottom: 1rem;
+  max-height: 50px;
 }
 
 .menu-heading {
   font-size: 1.2rem;
-  text-align: center;
-  margin: 0 0 1rem 0rem;
   font-weight: 600;
+  margin: 0 0 1rem 0rem;
+  text-align: center;
+}
+
+.menu-heading a {
+  color: inherit;
+  text-decoration: none;
+}
+
+.menu-container {
+  align-items: center;
+  background-color: #f5f5f5;
+  box-sizing: border-box;
+  display: flex;
+  justify-content: center;
+  min-height: 100vh;
+  padding: 1rem;
+}
+
+.menu-card {
+  background-color: white;
+  border-radius: 12px;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  max-width: 400px;
+  padding: 1rem;
+  width: 100%;
+}
+
+.menu-items {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.menu-categories {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 1rem; /* gap between buttons */
+  margin-bottom: 1rem;
 }
 
 .menu-content {
-  flex-grow: 1;
   display: flex;
   flex-direction: column;
+  flex-grow: 1;
   justify-content: center;
 }
 
@@ -82,27 +89,28 @@ html {
 }
 
 .menu-title {
+  background-color: white;
   font-size: 1rem;
   font-weight: 500;
   margin: 0 0 0.5rem 1rem;
   /* Sticky Titles */
   position: -webkit-sticky; /* For Safari */
   position: sticky;
-  top: 98px; /* Adjust this value based on the height of your header */
-  background-color: white;
+  top: 98px; /* Adjust based on header */
   z-index: 5;
 }
 
 .category-button {
   background-color: #e65100;
-  color: white;
   border: none;
   border-radius: 24px;
-  padding: 0.75rem 2rem;
-  font-size: 1rem;
+  color: white;
   cursor: pointer;
+  font-size: 1rem;
+  padding: 0.75rem 2rem;
   transition: background-color 0.3s;
-  margin-bottom: 1rem;
+  /* Adjust width */
+  flex: 1 1 calc(50% - 1rem); /* Adjust width to be 50% minus the gap */
 }
 
 .category-button:hover {
