--- a/src/components/Menu.css
+++ b/src/components/Menu.css
@@ -98,6 +98,9 @@ html {
   position: sticky;
   top: 98px; /* Adjust based on header */
   z-index: 5;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .category-button {
@@ -110,11 +113,17 @@ html {
   padding: 0.75rem 2rem;
   transition: background-color 0.3s;
   /* Adjust width */
-  flex: 1 1 calc(50% - 1rem); /* Adjust width to be 50% minus the gap */
+  flex: 1 1 calc(50% - 1rem); /* 50% minus the gap */
 }
 
 .category-button:hover {
   background-color: #f57c00;
+}
+
+.scroll-to-top-icon {
+  margin-left: 0.5rem;
+  color: inherit;
+  text-decoration: none;
 }
 
 @media (min-height: 700px) {
