--- a/src/components/Menu.css
+++ b/src/components/Menu.css
@@ -120,6 +120,31 @@ html {
   background-color: #f57c00;
 }
 
+.go-to-cart {
+  position: sticky;
+  bottom: 0;
+  background-color: white;
+  padding: 0.1rem;
+  z-index: 10;
+}
+
+.go-to-cart-button {
+  background-color: #e65100;
+  border: none;
+  border-radius: 24px;
+  color: white;
+  cursor: pointer;
+  font-size: 1rem;
+  padding: 0.5rem 2rem;
+  transition: background-color 0.3s;
+  width: calc(100% - 2rem); /* Adjust width to account for margins */
+  margin: 1rem;
+}
+
+.go-to-cart-button:hover {
+  background-color: #f57c00;
+}
+
 .scroll-to-top-icon {
   margin-left: 0.5rem;
   color: inherit;
