--- a/src/components/Cart.css
+++ b/src/components/Cart.css
@@ -62,6 +62,11 @@ html {
   background-color: #d84315;
 }
 
+.cart-subtotal {
+  font-weight: 700;
+  text-align: center;
+}
+
 @media (min-height: 700px) {
   .promotions-card {
     justify-content: space-between;
