--- a/src/components/MenuItem.css
+++ b/src/components/MenuItem.css
@@ -2,14 +2,12 @@
   width: 40%;
   position: relative;
   display: flex;
-
-  flex-direction: column; /* Arrange items vertically */
-  align-items: center; /* Center horizontally */
-  justify-content: center; /* Center vertically */
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
   box-sizing: border-box;
   margin: 0.5rem;
   padding: 10px;
-  /* For Debugging */
   /* border: 1px solid black; */
 }
 
