--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,5 @@
-/* Sora Google Font */
+/* Index.css */
+
 @import url("https://fonts.googleapis.com/css2?family=Sora:wght@400;500;600;700&display=swap");
 
 :root {
