Refactor cart logic and apply discounts to calculate total

--- a/src/components/styles/Cart.css
+++ b/src/components/styles/Cart.css
@@ -60,6 +60,26 @@
 .cart-subtotal {
   font-weight: 700;
   text-align: center;
+  /* border: 1px solid #e0e0e0; */
+  margin-top: 0.5rem;
+  margin-bottom: 0;
+}
+
+.cart-discount {
+  font-weight: 700;
+  text-align: center;
+  color: #d84315;
+  /* border: 1px solid #e0e0e0; */
+  margin-top: 0;
+  margin-bottom: 0;
+}
+
+.cart-total {
+  font-weight: 700;
+  text-align: center;
+  /* border: 1px solid #e0e0e0; */
+  margin-top: 0;
+  margin-bottom: 1rem;
 }
 
 @media (min-height: 700px) {
