--- a/src/components/styles/Cart.css
+++ b/src/components/styles/Cart.css
@@ -82,6 +82,28 @@
   margin-bottom: 1rem;
 }
 
+.cart-promotions-section {
+  margin-bottom: 1rem;
+}
+
+.cart-promotions-card {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+
+.cart-promotion-button {
+  background-color: #fe491e;
+  border: none;
+  border-radius: 20px;
+  color: white;
+  font-weight: 600;
+  cursor: none;
+  font-size: 0.8rem;
+  padding: 0.5rem 1rem;
+  margin: 0.5rem;
+}
+
 @media (min-height: 700px) {
   .promotions-card {
     justify-content: space-between;
